...
                                                <state key="normal" image="Search Icon">
                                                    <attributedString key="attributedTitle">
                                                        <fragment content="Search Game or Tech">
                                                            <attributes>
                                                                <color key="NSColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                <state key="normal" image="Game Icon">
                                                    <attributedString key="attributedTitle">
                                                        <fragment content="General game reviews">
                                                            <attributes>
                                                                <color key="NSColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                <state key="normal" image="Tech Icon">
                                                    <attributedString key="attributedTitle">
                                                        <fragment content="General Tech News">
                                                            <attributes>
                                                                <color key="NSColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                <state key="normal" image="Settings Icon">
                                                    <attributedString key="attributedTitle">
                                                        <fragment content="User Preferences">
                                                            <attributes>
                                                                <color key="NSColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                </connections>
                                            </segmentedControl>
                                            <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" allowsEditingTextAttributes="YES" borderStyle="roundedRect" placeholder="game or tech name" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="GNM-Cp-nHX">
                                                <rect key="frame" x="50" y="304" width="282" height="34"/>
                                                <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
...
                                                            <constraint firstAttribute="height" constant="50" id="EUd-N8-qxv"/>
                                                        </constraints>
                                                        <state key="normal" title="Search Game" image="Search Icon">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
...
                                                            <constraint firstAttribute="height" constant="50" id="mHt-J7-GGo"/>
                                                        </constraints>
                                                        <state key="normal" title="Search Tech" image="Search Icon">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
...
                                                        <rect key="frame" x="107.33333333333334" y="0.0" width="257.33333333333326" height="52.666666666666664"/>
                                                        <attributedString key="attributedText">
                                                            <fragment content="Loading...">
                                                                <attributes>
                                                                    <color key="NSColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                                <state key="normal" image="Save Icon">
                                                                    <attributedString key="attributedTitle">
                                                                        <fragment content="Save Preferences">
                                                                            <attributes>
                                                                                <color key="NSColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
